<resources>
    <!-- SplashScreen Activity -->
    <string name="app_name">Advanced Notes</string>
    <string name="company_name">Ariete</string>

    <!-- Home Fragment -->
    <string name="my_notes">My Notes</string>
    <string name="search_notes">Search notes</string>
    <string name="no_notes">There are no notes</string>

    <!-- Note Fragment -->
    <string name="title_hint">Title</string>
    <string name="input_hint">Type your note here</string>

    <!-- Additional -->
    <string name="additional">Additional</string>
    <string name="change_color">Change color</string>
    <string name="add_image">Add image</string>
    <string name="add_url">Add URL</string>
    <string name="delete_note">Delete note</string>

    <!-- Name Warning -->
    <string name="warning_title">Warning</string>
    <string name="warning_text">There is already a note with the same title. Please change it!</string>
    <string name="ok">OK</string>

    <!-- Color Picker -->
    <string name="selection_of_color">Color Selection</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>

    <!-- Add URL -->
    <string name="enter_url">Enter URL</string>

    <!-- Delete Note -->
    <string name="question_delete_note">Are you sure you want to delete this note?</string>

    <!-- Settings Fragment -->
    <string name="settings">Settings</string>

    <!-- About Us -->
    <string name="about_us">About us</string>
    <string name="about_us_text">Ariete is a team of young developers, working hard in order to extend their programming skills and abilities and bring their advanced projects to the community</string>
</resources>