<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="8dp"
    android:padding="8dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/dialog_image"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:src="@drawable/company_logo" />

    <TextView
        android:id="@+id/company_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialog_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/ubuntu_bold"
        android:gravity="center_vertical"
        android:includeFontPadding="false"
        android:text="@string/company_name"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/dialog_content"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/company_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/ubuntu_regular"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/about_us_text"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialog_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/ubuntu_medium"
        android:padding="8dp"
        android:background="@drawable/selector_ok"
        android:text="@string/ok"
        android:textColor="@color/blue"
        android:textSize="16sp" />
</RelativeLayout>