<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="16dp"
    tools:context=".fragments.HomeFragment">

    <TextView
        android:id="@+id/my_notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:fontFamily="@font/ubuntu_bold"
        android:includeFontPadding="false"
        android:text="@string/my_notes"
        android:textColor="?attr/colorPrimaryVariant"
        android:textSize="32sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.SearchView
        android:id="@+id/input_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/my_notes"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/authentification_input_field_shape"
        android:fontFamily="@font/ubuntu_regular"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:textSize="12sp"
        app:queryHint="@string/search_notes"
        app:searchIcon="@drawable/ic_search" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/note_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/input_search"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/text_no_notes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:fontFamily="@font/ubuntu_regular"
        android:includeFontPadding="false"
        android:text="@string/no_notes"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/add_note"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/ic_add" />
</RelativeLayout>