<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="8dp"
    android:background="@drawable/authentification_input_field_shape"
    android:padding="8dp">

    <ImageView
        android:id="@+id/dialog_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_delete"
        app:tint="?attr/colorOnSecondary" />

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/dialog_image"
        android:layout_alignBottom="@id/dialog_image"
        android:layout_marginStart="8dp"
        android:layout_toEndOf="@id/dialog_image"
        android:fontFamily="@font/ubuntu_bold"
        android:gravity="center_vertical"
        android:text="@string/delete_note"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/dialog_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialog_title"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/ubuntu_regular"
        android:text="@string/question_delete_note"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialog_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/ubuntu_medium"
        android:padding="8dp"
        android:background="@drawable/selector_color_confirm"
        android:text="@string/delete_note"
        android:textColor="@color/red"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialog_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_toStartOf="@id/delete"
        android:fontFamily="@font/ubuntu_medium"
        android:padding="8dp"
        android:text="@string/cancel"
        android:background="@drawable/selector_color_cancel"
        android:textColor="@color/blue"
        android:textSize="16sp" />
</RelativeLayout>